[package]
name = "shivacore"
version = "0.0.1"
edition = "2021"
description = "ShivaCore Kernel — implementiert ATS-1000, eigener Kernel ohne Linux-Unterbau"

[[bin]]
name = "shivacore"
test = false
bench = false

[dependencies]
bootloader_api = "0.11"
volatile = "0.2.6"
spin = "0.9"
x86_64 = "0.15"
uart_16550 = "0.3"
pic8259 = "0.11"
pc-keyboard = "0.7"
lazy_static = { version = "1.5", features = ["spin_no_std"] }
linked_list_allocator = "0.10"
noto-sans-mono-bitmap = { version = "0.2", default-features = false, features = ["regular", "size_16"] }

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
